# prismatic

./: Cargo.toml  README.md  config.toml
examples/booleans/: main.rs
math/: Cargo.toml
math/src/: cross.rs  decimal.rs  dot.rs  lib.rs  matrix2.rs  origin.rs  parametric_iterator.rs  quaternion.rs  scalar.rs  tensor.rs  vector2.rs  vector3.rs
mesh-inter-chain/: Cargo.toml
mesh-inter-chain/examples/booleans/: main.rs
mesh-inter-chain/src/: linear.rs  planar.rs  polygon_basis.rs  primitives_relation.rs  reversable.rs
mesh-inter-chain/src/indexes/: aabb.rs  quadtree.rs  vertex_index.rs
mesh-inter-chain/src/indexes/geo_index/: face.rs  geo_object.rs  index.rs  mesh.rs  poly.rs  poly_rtree.rs  rib.rs
mesh-inter-chain/src/linear/: line.rs  ray.rs
mesh-inter-chain/src/planar/: face.rs  polygon.rs
mesh-inter-chain/src/primitives_relation/: linear.rs  linear_point.rs  planar.rs  point_planar.rs
mesh-inter-chain/src/surface/: bounded_surface.rs
path/: Cargo.toml
path/src/: curve.rs  get_length.rs  get_t.rs  lerp.rs  lib.rs  path.rs  path_builder.rs  path_item.rs  shift_in_plane.rs  update_start_end.rs
prismatic/: Cargo.toml
prismatic/src/: geometry.rs  lib.rs
shapes/: Cargo.toml
src/: basis.rs  bezier.rs  bsp.rs  decimal.rs  face_collection.rs  geometry.rs  hull_depr.rs  hyper_path.rs  indexes.rs  intersects.rs  lib.rs  linear.rs  math.rs  origin.rs  path.rs  point.rs  polygon_basis.rs  polyline.rs  primitives.rs  primitives_relation.rs  shapes.rs  stiching.rs  surface_depr.rs
surface/: Cargo.toml
surface/examples/: four_surface.rs  surface_between_paths.rs
surface/src/: bounded_four_surface.rs  edge_tensor.rs  lib.rs  parametric_iterator.rs  polygon_from_line_in_plane.rs  surface_between_path_builder.rs  surface_between_paths.rs
(+91 files in other folders)
