[package]
name = "math"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = { version = "0.5.1", optional = true }
num-traits = "0.2.19"
rust_decimal = { version = "1.36.0", optional = true }
rust_decimal_macros = { version = "1.36.0", optional = true }
simba = { version = "0.9.0", optional = true }


[features]
default= ["decimal"]
decimal=  ["dep:rust_decimal","dep:rust_decimal_macros","dep:approx","dep:simba"]
