[package]
name = "mesh-inter-chain"
version = "0.1.0"
edition = "2021"
description="Library to search intersections of several meshes"

[dependencies]

anyhow = "1.0.75"
approx = "0.5.1"
assert_matches = "1.5.0"
cdt = "0.1.0"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
math = { version = "0.1.0", path = "../math" }
num-traits = "0.2.17"
path = { version = "0.1.0", path = "../path" }
rand = "0.8.5"
rstar = "0.12.0"
rust_decimal = { version = "1.33.1", features = ["maths"] }
rust_decimal_macros = "1.33.1"
seq-macro = "0.3.5"
simba = { version = "0.8.1", features = ["decimal"] }
stl_io = "0.7.0"
#surface = { version = "0.1.0", path = "../surface" }
tap = "1.0.1"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
shapes = { path = "../shapes" }
