[package]
name = "surface"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
delaunator = "1.0.2"
derive_builder = "0.20.2"
math = { version = "0.1.0", path = "../math" }
num-traits = "0.2.19"
path = { version = "0.1.0", path = "../path" }
qhull = "0.3.1"

[dev-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
prismatic = { path = "../prismatic" }


